--- a/src/app/components/polls/poll-view/poll-view.component.html
+++ b/src/app/components/polls/poll-view/poll-view.component.html
@@ -1,3 +1,6 @@
-<p>poll-view works!</p>
+<h1>View Poll</h1>
 
-<app-poll-form></app-poll-form>
+<app-poll-form [model]="model"
+               [crudMode]="'consult'"
+               (onClose)="doOnClose($event)">
+</app-poll-form>
