--- a/src/app/components/polls/polls-list/polls-list.component.html
+++ b/src/app/components/polls/polls-list/polls-list.component.html
@@ -4,10 +4,10 @@
 		<div class="col-12">
 			<div class="alert alert-success" role="alert" *ngIf="dataSavedOK">
 				<span>Poll was saved successfully!</span>
-			</div> 
+			</div>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row" style="padding-bottom: 20px;">
 		<div class="col-1">
 			<label class="label">Look for:</label>
 		</div>
@@ -28,19 +28,19 @@
 					<table style="width:100%" class="table table-striped table-bordered table-hover">
 						<thead class="thead-dark">
 							<tr>
-								<th> Id </th>
-								<th> Title </th>
-								<th> Num of Questions </th>
-								<th> Client's Name </th>
-								<th> Creation Date </th>
-								<th> Due date</th>
-								<th> Status </th>
-								<th> Actions </th>
+								<th scope="thead"> Id </th>
+								<th scope="thead"> Title </th>
+								<th scope="thead"> Num of Questions </th>
+								<th scope="thead"> Client's Name </th>
+								<th scope="thead"> Creation Date </th>
+								<th scope="thead"> Due date</th>
+								<th scope="thead"> Status </th>
+								<th scope="thead"> Actions </th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr *ngIf="dataSource.length == 0"><td colspan="8">No data ...</td></tr>
-							<tr *ngFor="let item of dataSource">
+							<tr *ngFor="let item of dataSource; let idx=index">
 								<td> {{item.pollId}} </td>
 								<td> {{item.title}}</td>
 								<td> {{item.questions.length}}</td>
@@ -49,20 +49,21 @@
 								<td> {{item.dueDate}} </td>
 								<td> {{statusesList[item.status]}} </td>
 								<td>
-									<a href="#" class="btn btn-sm btn-primary">Edit</a>
-									<a href="#" class="btn btn-sm btn-danger">Delete</a>
-									<a href="#" class="btn btn-sm btn-secondary">View</a>
+									<a href="#" class="btn btn-sm btn-primary" (click)="doEditSelect(item, idx)" >Edit</a>
+									<a href="#" class="btn btn-sm btn-danger" (click)="doDeleteSelect(item)" >Delete</a>
+									<a href="#" class="btn btn-sm btn-secondary" (click)="doViewSelect(item)" >View</a>
 								</td>
 							</tr>
 						</tbody>
 						<tfoot>
 							<tr class="thead-dark">
 								<th colspan="2"> No. of records {{ dataSource.length }}</th>
-								<th colspan="6">   </th>
+								<th colspan="6">&nbsp;</th>
 
 							</tr>
 						</tfoot>
 					</table>
+					<div class="row" style="margin-top: 35px;" >&nbsp;</div>
 				</div>
 			</div>
 		</div>
@@ -70,11 +71,29 @@
 	<div class="row">
 		<div class="col-12">
 			<div class="create-poll" *ngIf="mode =='create'">
-				<app-poll-create [poll]="poll"
+				<app-poll-create
 				(onSave)="doOnSavePoll($event)"
+				(onSaveAndContinue)="doOnSavePollAndContinue($event)"
 				(onClose)="doOnCloseCreatePoll($event)"
-				>
-			</app-poll-create>
+				></app-poll-create>
+			</div>
+			<div class="update-poll" *ngIf="mode =='update'">
+				<app-poll-update [model]="model"
+				(onUpdate)="doOnUpdatePoll($event)"
+				(onClose)="doOnCloseCreatePoll($event)"
+				></app-poll-update>
+			</div>
+      <div class="delete-poll" *ngIf="mode =='delete'">
+				<app-poll-delete [model]="model"
+				(onDelete)="doOnDeletePoll($event)"
+				(onClose)="doOnCloseCreatePoll($event)"
+				></app-poll-delete>
+			</div>
+      <div class="consult-poll" *ngIf="mode =='consult'">
+				<app-poll-view [model]="model"
+				(onClose)="doOnCloseCreatePoll($event)"
+				></app-poll-view>
+			</div>
 		</div>
 	</div>
 </div>
