Ajustes en la pantalla de polls-list

--- a/src/app/components/polls/poll-form/poll-form.component.html
+++ b/src/app/components/polls/poll-form/poll-form.component.html
@@ -74,7 +74,9 @@
                                  [ngbTypeahead]="search"
                                  [inputFormatter]="formatter"
                                  [resultFormatter]="formatter"
-                                 [editable]='false'>
+                                 [editable]='false'
+                                 (input)="refreshData()"
+                                 >
 
                           <div class="alert alert-danger" role="alert"
                                *ngIf="submitted && pollForm.controls['clientName'].valid == false">
